# airbnb_concierge_db_feed

./: .gitignore  README.md  docker-compose.yaml
airbnb_concierge_etl/: pyproject.toml
airbnb_concierge_etl/airbnb_concierge_etl/airflow_operator/: operators.py
airbnb_concierge_etl/airbnb_concierge_etl/extract/: opendatasoft_extract.py
airbnb_concierge_etl/airbnb_concierge_etl/model/: sandbox.py
airbnb_concierge_etl/airbnb_concierge_etl/transform/: airbnb_place.py  client.py
airbnb_concierge_etl/unit_tests/extract/: test_bucket_extract.py
companies/: .~lock.2023-02-20.csv#
docker_images/airflow/: Dockerfile  build.sh
docker_images/airflow/config/: hostname_resolver.py  logging_config.yml
docker_images/airflow/dags/: runners.py  sandbox_etl_dag.py
docker_images/dev_database/: 1-create-db.sql  2-create_airflow_db.sql  3-init-database.sql  Dockerfile
